# OpenPhySyn

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md
app/: Phy.i  PhyMain.cpp  Psn.i  PsnMain.cpp
cmake/: ClangFormat.cmake  CodeCoverage.cmake  Config.hpp.in  CppCheck.cmake  Doctest.cmake  LTO.cmake  Misc.cmake  Transforms.cmake  Warnings.cmake  config.hpp.in
doc/: CHANGELOG.md
include/OpenPhySyn/Database/: DatabaseHandler.hpp  DatabaseHandler.in  LibraryMapping.hpp  OpenDBHandler.hpp  OpenStaHandler.hpp  Types.hpp
include/OpenPhySyn/Liberty/: LibraryMapping.hpp
include/OpenPhySyn/Optimize/: BufferTree.hpp  SteinerTree.hpp
include/OpenPhySyn/Psn/: ProgramOptions.hpp  Psn.hpp
include/OpenPhySyn/PsnLogger/: LogLevel.hpp  PsnLogger.hpp
include/OpenPhySyn/Sta/: DatabaseSta.hpp  DatabaseStaNetwork.hpp  PathPoint.hpp
include/OpenPhySyn/SteinerTree/: SteinerTree.hpp
include/OpenPhySyn/Transform/: PsnTransform.hpp  TransformHandler.hpp
include/OpenPhySyn/Utils/: ClusteringUtils.hpp  IntervalMap.hpp  PsnGlobal.hpp  StringUtils.hpp
include/PhyKnight/Analyzer/: Analyzer.hpp
include/PhyKnight/Database/: DatabaseHandler.hpp  DatabaseHandler.in  DatabaseHelper.hpp  OpenDBHandler.hpp  OpenDBHelper.hpp  OpenStaHandler.hpp  OpenStaHelper.hpp  Types.hpp
include/PhyKnight/Phy/: Phy.hpp  ProgramOptions.hpp
include/PhyKnight/PhyLogger/: LogLevel.hpp  PhyLogger.hpp
include/PhyKnight/Sta/: DatabaseSta.hpp  DatabaseStaNetwork.hpp
include/PhyKnight/SteinerTree/: SteinerTree.hpp
include/PhyKnight/Transform/: PhyTransform.hpp
jenkins/: build.sh  install.sh  test.sh
src/Analyzer/: Analyzer.cpp
src/Database/: DatabaseHandler.cpp  DatabaseHelper.cpp  LibraryMapping.cpp  OpenDBHandler.cpp  OpenDBHelper.cpp  OpenStaHandler.cpp  OpenStaHelper.cpp
src/Def/: DefReader.cpp  DefReader.hpp  DefWriter.cpp
src/DefReader/: DefReader.cpp  DefReader.hpp
src/DefWriter/: DefWriter.cpp  DefWriter.hpp
src/Lef/: LefReader.hpp
src/LefReader/: LefReader.cpp  LefReader.hpp
src/Liberty/: LibraryMapping.cpp
src/LibertyReader/: LibertyReader.cpp  LibertyReader.hpp
src/OpenROAD/: MakeOpenPhySyn.cpp
src/Optimize/: BufferTree.cpp  SteinerTree.cpp
src/Phy/: Exports.cpp  Exports.hpp  Phy.cpp  ProgramOptions.cpp
src/PhyException/: Error.cpp  Error.hpp  FileException.cpp  FileException.hpp  NoTechException.cpp  NoTechException.hpp  ParseLibertyException.cpp  ParseLibertyException.hpp  PhyException.cpp  PhyException.hpp  ProgramOptionsException.cpp  ProgramOptionsException.hpp  TransformNotFoundException.cpp  TransformNotFoundException.hpp  UnimplementedMethodException.cpp  UnimplementedMethodException.hpp
src/PhyLogger/: PhyLogger.cpp
src/Psn/: DesignSettings.cpp  Exports.cpp  Exports.hpp  ProgramOptions.cpp  Psn.cpp
src/PsnException/: Error.hpp  FileException.cpp  FileException.hpp  FluteInitException.hpp  LoadTransformException.hpp  NoTechException.hpp  ParseLibertyException.hpp  ProgramOptionsException.hpp  PsnException.hpp  SteinerException.hpp  TransformNotFoundException.hpp  UnimplementedMethodException.hpp
src/PsnLogger/: PsnLogger.cpp
src/Sta/: DatabaseSdcNetwork.cpp  DatabaseSdcNetwork.hpp  DatabaseSta.cpp  DatabaseStaNetwork.cpp  PathPoint.cpp
src/StandardTransforms/BufferFanoutTransform/: CMakeLists.txt  README.md
src/StandardTransforms/BufferFanoutTransform/src/: BufferFanoutTransform.cpp  BufferFanoutTransform.hpp
src/StandardTransforms/BufferResizeTransform/: CMakeLists.txt
src/StandardTransforms/BufferResizeTransform/src/: BufferResizeTransform.cpp  BufferResizeTransform.hpp
src/StandardTransforms/ConstantPropagationTransform/: CMakeLists.txt
src/StandardTransforms/ConstantPropagationTransform/src/: ConstantPropagationTransform.cpp  ConstantPropagationTransform.hpp
src/StandardTransforms/GateCloningTransform/: CMakeLists.txt  README.md
src/StandardTransforms/GateCloningTransform/src/: GateCloningTransform.cpp  GateCloningTransform.hpp
src/StandardTransforms/HelloTransform/: CMakeLists.txt
src/StandardTransforms/HelloTransform/src/: HelloTransform.cpp  HelloTransform.hpp
src/StandardTransforms/PinSwapTransform/: CMakeLists.txt  README.md
src/StandardTransforms/PinSwapTransform/src/: PinSwapTransform.cpp  PinSwapTransform.hpp
src/StandardTransforms/RepairTimingTransform/: CMakeLists.txt  README.md
src/StandardTransforms/RepairTimingTransform/src/: RepairTimingTransform.cpp  RepairTimingTransform.hpp
src/StandardTransforms/TimingBufferTransform/: CMakeLists.txt  README.md
src/SteinerTree/: SteinerTree.cpp
src/Tcl/: DefinePSNCommands.tcl  ImportNS.tcl  Readline.tcl  Setup.tcl  SetupPhy.tcl  SetupPsn.tcl  SetupPsnSta.tcl  SetupSta.tcl
src/Transform/: PhyTransform.cpp  PsnTransform.cpp  TransformHandler.cpp  TransformHandler.hpp  TransformInfo.cpp
src/Utils/: ClusteringUtils.cpp  DatabaseUtils.cpp  DatabaseUtils.hpp  FileUtils.cpp  FileUtils.hpp  FilesystemLegacyHelpers.cpp  FilesystemLegacyHelpers.hpp  IntervalMap.cpp  StringUtils.cpp  StringUtils.hpp
tests/: BufferFanout.cpp  BufferTopPort.cpp  CMakeLists.txt  ComplexConstantPropagation.cpp  GateClone.cpp  HelloTransform.cpp  PhyDemo.cpp  PinSwap.cpp  PinSwapPower.cpp  ReadLefDef.cpp  ReadLiberty.cpp  RepairTiming.cpp  RepairTimingFanoutOnly.cpp  SimpleConstantPropagation.cpp  SimpleConstantPropagationInversion.cpp  Sta.cpp  SteinerTree.cpp  TestMain.cpp  TimingBuffer.cpp  TimingBufferWithSizing.cpp  TimingInvertingBuffer.cpp  WriteDef.cpp
tests/data/designs/aes_drv/: aes.def  constraints.sdc
tests/data/designs/constants/: constants.def  constants_simple.def  constants_simple.v  constants_simple_rtl.v
tests/data/designs/timing_buffer/: aes.sdc  gcd.sdc  gcd_gp.def  ibex.sdc  ibex_tight_clk.sdc  swerv.sdc  tinyRocket.sdc
tests/tcl/: buffer_resize.tcl  buffer_transform.tcl  constant_propagation.tcl  gate_cloning.tcl  getting_started.tcl  power_pin_swap.tcl  read_design.tcl  read_lib.tcl  repair_timing.tcl  sta_report_checks.tcl  timing_buffer.tcl  timing_inverting_buffer.tcl  timing_pin_swap.tcl  timing_sizing_buffer.tcl
(+3 files in other folders)
